# CoDeskTeam

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.ja.md  README.ko.md  README.md  README.zh-CN.md  opencode.jsonc  package.json  pnpm-lock.yaml
backend/: README.md  alembic.ini  pyproject.toml
backend/aistaff_api/: app_factory.py  config.py  db.py  deps.py  output_cleanup.py  project_utils.py  session_store.py
backend/aistaff_api/agent/: prompt.py
backend/aistaff_api/routers/: auth.py  chatbi.py  feishu.py  files.py  history.py  integrations_openclaw.py  prototype.py  skills.py  team_exports.py  team_integrations.py  team_invites.py  team_settings_projects.py  team_skills.py  team_teams.py  wecom.py
backend/aistaff_api/services/: agent_service.py  auth_service.py  browser_service.py  codex_service.py  feishu_service.py  history_file_store.py  nanobot_service.py  opencode_service.py  pi_service.py  task_artifact_service.py  team_export_service.py  team_skill_seed_service.py  wecom_service.py
backend/alembic/: env.py
backend/alembic/versions/: 20260220_0001_init_schema.py  20260221_0002_integrations.py  (+2 more)
backend/jetlinks_ai_api/: app_factory.py  chat_payload_utils.py  config.py  db.py  deps.py  env_utils.py  main.py  openai_compat.py  project_utils.py  time_utils.py  url_utils.py
backend/tests/: conftest.py  test_auth_flow.py  test_config_legacy_migration.py  test_meta_ready.py  test_openai_compat.py  test_openclaw_error_handling.py  test_openclaw_integration.py  test_openclaw_skills_and_poster.py  test_public_demo.py  test_toolkit_pipeline.py
(+148 files in other folders)
