[project]
name = "aistaff-api"
version = "0.1.0"
description = "AI 员工 - FastAPI 后端"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "jinja2>=3.1",
  "itsdangerous>=2.1",
  "pydantic>=2.6",
  "email-validator>=2.1",
  "cryptography>=41.0.0",
  "python-pptx>=0.6.23",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.2",
  "alembic>=1.13",
  "aiosqlite>=0.21",
  "asyncpg>=0.29",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "psycopg[binary]>=3.1",
  "pyjwt>=2.10",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.40",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.5",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.ruff]
exclude = ["aistaff_api/vendor"]
